--- a/myProjects/rek/index.html
+++ b/myProjects/rek/index.html
@@ -8,10 +8,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="col ">
+        <a href="#collapse__map" data-toggle="collapse" aria-expanded="true" class="bg-dark h-100">
+            <h2 class="map__h2">
+                Map
+            </h2>
+        </a>
+
+        <p id="collapse__map" class="collapse show mb-0">
+            Lorem ipsum dolor text....
+        </p>
+    </section>
+    <section class="col">
+        <a href="#collapse__table" data-toggle="collapse" aria-expanded="false" class="bg-dark h-100">
+            <h2 class="map__h2">
+                Map
+            </h2>
+        </a>
+
+        <p id="collapse__table" class="collapse">
+            Lorem ipsum dolor text....
+        </p>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
