--- a/myProjects/rek/index.html
+++ b/myProjects/rek/index.html
@@ -8,32 +8,94 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+        integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+        crossorigin="" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="col ">
-        <a href="#collapse__map" data-toggle="collapse" aria-expanded="true" class="bg-dark h-100">
-            <h2 class="map__h2">
-                Map
-            </h2>
-        </a>
+    <!-- display none button, for "desribe" modal pop out -->
+    <button type="button" class="btn d-none showModal" data-toggle="modal" data-target="#modal--describe"></button>
+    <!-- MODAL POP OUT -->
+    <div class="modal fade" id="modal--describe" tabindex="-1" role="dialog" aria-labelledby="modal__label"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal__label">New localization</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="col-form-label">Name:</label>
+                            <input type="text" class="form-control name" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Describe:</label>
+                            <textarea class="form-control describe" id="message-text"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary save">Save</button>
 
-        <p id="collapse__map" class="collapse show mb-0">
-            Lorem ipsum dolor text....
-        </p>
-    </section>
-    <section class="col">
-        <a href="#collapse__table" data-toggle="collapse" aria-expanded="false" class="bg-dark h-100">
-            <h2 class="map__h2">
-                Map
-            </h2>
-        </a>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ACCORDION -->
+    <main id="accordion">
+        <!-- MAP -->
+        <section class="card">
+            <div class="card-header" id="map">
+                <h2 class="mb-0">
+                    <button class="btn btn-info" data-toggle="collapse" data-target="#collapse__map"
+                        aria-expanded="true" aria-controls="collapse__map">
+                        Map
+                    </button>
+                </h2>
+            </div>
 
-        <p id="collapse__table" class="collapse">
-            Lorem ipsum dolor text....
-        </p>
-    </section>
+            <div id="collapse__map" class="collapse show myMap" aria-labelledby="map" data-parent="#accordion">
+                <div class="card-body " id="mapid" style="height: calc(100vh - 135px)">
+
+                </div>
+            </div>
+        </section>
+        <!-- TABLE -->
+        <section class="card">
+            <div class="card-header" id="table">
+                <h5 class="mb-0">
+                    <button class="btn btn-info collapsed" data-toggle="collapse" data-target="#collapse__table"
+                        aria-expanded="false" aria-controls="collapseTwo">
+                        Targets Table
+                    </button>
+                </h5>
+            </div>
+            <div id="collapse__table" class="collapse" aria-labelledby="table" data-parent="#accordion">
+                <table class="table table-striped card-body mb-0">
+                    <thead>
+                        <tr>
+                            <th>Target</th>
+                            <th>X</th>
+                            <th>Y</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table__body">
+                        <!-- new POSITIONS  -->
+                    </tbody>
+                </table>
+            </div>
+
+        </section>
+
+    </main>
+
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -45,7 +107,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+        integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+        crossorigin=""></script>
 
+
+    <script src="/script.js"></script>
 </body>
 
 </html>
