--- a/myProjects/rek/index.html
+++ b/myProjects/rek/index.html
@@ -32,10 +32,12 @@
                     <form>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Name:</label>
+                            <!-- NAME -->
                             <input type="text" class="form-control name" id="recipient-name">
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">Describe:</label>
+                            <!-- DESCRIBE -->
                             <textarea class="form-control describe" id="message-text"></textarea>
                         </div>
                     </form>
